--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack serve --mode development"
   },
   "author": "Your Name",
   "license": "MIT",
